First flawed implementation of Runtime Canonical Names
Multiple problems:

* I am introducing unnecessary complexity, why not use binary names
  directly for local classes, anonymous classes, etc.?
  This is also what other debuggers do and it reflects the actual state
  of the JVM
* Finding out whether a type is a member type of another type is quite
  hard.
  I can not simply check the nestedType() function of all reference
  types to establish the member type relationships, since the
  surrounding type of a member type may not be loaded / created
  (this can for example be the case for static member classes)
  I can also not derive the member type relationship reliably from the
  type name, since the type names of lambda expressions are not known.
* due to these reasons, the current implementation of
  RuntimeCanonicalNames does not work.
  I will fix it in the next commit